# $Id$

2008-03-27	Konstantin V. Arkhipov

	* main/Utils/HeaderUtils.class.php: redirect() removed, finally.

2008-02-18	Konstantin V. Arkhipov

	* core/Cache/WatermarkedPeer.class.php: further collisions prevention:
	onPHP's version now appends to watermark.

2007-10-30	Konstantin V. Arkhipov

	* meta/classes/MetaConfiguration.class.php: class name collision
	detection added.

2007-09-19	Konstantin V. Arkhipov

	* main/DAOs/Workers/: uncaching fixed in dropByIds().

2007-08-13	Vladimir A. Altuchov

	* core/Form/Primitives/PrimitiveTime.class.php: correct import
	condition.

2007-07-23	Ivan Y. Khvostishkov

	* global.inc.php.tpl: possible security hole fixed on autoload's
	level.

2007-06-19	Konstantin V. Arkhipov

	* main/SPL/bundled/: removed, it was a bad idea.

2007-06-18	Konstantin V. Arkhipov

	* core/Form/MappedForm.class.php: now checks Form's rules upon
	import().

2007-06-02	Konstantin V. Arkhipov

	* 0.8.7 released.

2007-05-01	Sergey S. Sergeev

	* meta/builders/BaseBuilder.class.php: return query if setters are
	empty.

2007-04-22	Konstantin V. Arkhipov

	* trunk/core/OSQL/SelectQuery.class.php: getFieldNames() now respects
	aliases.

2007-03-22	Ivan Y. Khvostishkov

	* main/Utils/RussianTextUtils.class.php: friendlyFileSize() backported
	from trunk.

2007-03-20	Konstantin V. Arkhipov

	* main/Containers/Unified/UnifiedContainer.class.php: fetched
	collection now excluded from serialization.

2007-03-19	Ivan Y. Khvostishkov

	* core/Form/Primitives/PrimitiveEnumeration.class.php: bugfix, value
	must be null on failed import.

2007-03-11	Konstantin V. Arkhipov

	* 0.8.6 released.

2007-03-02	Dmitry E. Demidov

	* core/Cache/WatermarkedPeer.class.php, 
	main/DAOs/Workers/FileSystemDaoWorker.class.php,
	main/DAOs/Workers/SmartDaoWorker.class.php,
	main/DAOs/Workers/VoodooDaoWorker.class.php: added ability to set separate 
	watermark on classes.
	
2007-02-26	Konstantin V. Arkhipov

	* core/Base/Enumeration.class.php: constructor's logic moved to